@@ -3,12 +3,13 @@ patchage (1.0.1) unstable;
   * Support Jack CV and OSC via metadata.
   * Add support for exporting canvas as PDF.
   * Save window size and position when closed via window manager.
+  * Order ports deterministically.
   * Style messages pane to match canvas.
   * Restore messages pane visibility and height.
   * Configure based on compiler target OS for cross-compilation.
   * Fix compilation with Jack DBus.
 
- -- David Robillard <d@drobilla.net>  Sun, 08 Feb 2015 11:03:20 -0500
+ -- David Robillard <d@drobilla.net>  Sat, 21 Feb 2015 17:10:27 -0500
 
 patchage (1.0.0) stable;
 
